--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,3 +1,53 @@
+# Utility
+set -s escape-time 0
+set-window-option -g automatic-rename off
+set-window-option -g mode-keys vi
+set-option -g default-shell /bin/zsh
+setw -g mouse
+set -g base-index 1
+set-option -g default-command "reattach-to-user-namespace -l $SHELL"
+
+setw -g window-status-fg cyan
+setw -g window-status-bg default
+setw -g window-status-attr dim
+
+setw -g window-status-current-fg white
+setw -g window-status-current-bg red
+setw -g window-status-current-attr bright
+
+set -g pane-border-fg green
+set -g pane-border-bg black
+
+set -g pane-active-border-fg white
+set -g pane-active-border-bg yellow
+
+set -g message-fg white
+set -g message-bg black
+set -g message-attr bright
+
+# Prefix
+set -g prefix C-a
+unbind C-b
+
+# Key bind
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key p paste-buffer
+
+bind | split-window -h
+bind - split-window -v
+
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+bind -r H resize-pane -L 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R 5
+
 #### COLOUR (Solarized dark)
 
 # default statusbar colors
