--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,11 +1,22 @@
-# Utility
-set -s escape-time 0
-set-window-option -g automatic-rename off
-set-window-option -g mode-keys vi
+# General
 set-option -g default-shell /bin/zsh
-setw -g mouse
-set -g base-index 1
+set -s escape-time 0
+set-option -g default-terminal "screen-256color"
+
+# Prefix
+set-option -g prefix C-a
+bind-key C-a send-prefix
+unbind C-b
+
+# Clipboard
 set-option -g default-command "reattach-to-user-namespace -l $SHELL"
+
+# Window
+set -g base-index 1
+set-option -g allow-rename off
+
+set-window-option -g mode-keys vi
+setw -g mouse
 
 setw -g window-status-fg cyan
 setw -g window-status-bg default
@@ -25,9 +36,6 @@ set -g message-fg white
 set -g message-bg black
 set -g message-attr bright
 
-# Prefix
-set -g prefix C-a
-unbind C-b
 
 # Key bind
 bind-key -t vi-copy v begin-selection
@@ -44,7 +52,7 @@ bind k select-pane -U
 bind l select-pane -R
 
 bind -r H resize-pane -L 5
-bind -r J resize-pane -D 5
+bind -r J resize-pane -D 5i
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
