--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -5,3 +5,14 @@
 	editor = nvim
 [ghq]
 	root=~/SourceCode/src
+[alias]
+	tree = log --graph --all --format="%x09%C(cyan bold)%an%Creset%x09%C(yellow)%h%Creset %C(magenta reverse)%d%Creset %s"
+	branches = branch -a
+	tags = tag
+	stashes = stash list
+	unstage = reset -q HEAD --
+	discard = checkout --
+	uncommit = reset --mixed HEAD~
+	amend = commit --amend
+	precommit = diff --cached --diff-algorithm=minimal -w
+	remotes = remote -v
