--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -1,92 +1,80 @@
-# General
-set-option -g default-shell /bin/zsh
-set -s escape-time 0
-set-option -g default-terminal "screen-256color"
+# キー入力のディレイを減らす
+set -sg escape-time 1
 
-# Prefix
-set-option -g prefix C-a
-bind-key C-a send-prefix
+# 256色端末を使用
+set -g default-terminal "screen-256color"
+
+# キーバインドのプレフィックス変更
+set -g prefix C-a
 unbind C-b
 
-# Clipboard
-set-option -g default-command "reattach-to-user-namespace -l $SHELL"
-
-# Window
+# ウィンドウのインデッックスを1から始める
 set -g base-index 1
-set-option -g allow-rename off
+# ペインのインデックスを1から始める
+set -g pane-base-index 1
 
-set-window-option -g mode-keys vi
+# マウスを有効にする
 setw -g mouse
 
-setw -g window-status-fg cyan
-setw -g window-status-bg default
-setw -g window-status-attr dim
-
-setw -g window-status-current-fg white
-setw -g window-status-current-bg red
-setw -g window-status-current-attr bright
-
-set -g pane-border-fg green
-set -g pane-border-bg black
-
-set -g pane-active-border-fg white
-set -g pane-active-border-bg yellow
-
-set -g message-fg white
-set -g message-bg black
-set -g message-attr bright
-
-
-# Key bind
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-bind-key p paste-buffer
-
+# ウィンドウ分割のキーバインド
 bind | split-window -h
 bind - split-window -v
 
+# ペイン移動のキーバインド
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+# ペインリサイズのキーバインド
 bind -r H resize-pane -L 5
 bind -r J resize-pane -D 5i
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
-#### COLOUR (Solarized dark)
+# クリップボード連携
+set -g default-command "reattach-to-user-namespace -l $SHELL"
 
-# default statusbar colors
-set-option -g status-bg black #base02
-set-option -g status-fg yellow #yellow
-set-option -g status-attr default
+# Viキーバインドを使用
+setw -g mode-keys vi
+
+# コピーモードのキーバインド
+bind -t vi-copy v begin-selection
+bind -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+bind -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+bind p paste-buffer
+
+##### Solarized dark #####
+## default statusbar colors
+set -g status-bg colour235 #base02
+set -g status-fg colour136 #yellow
+set -g status-attr default
 
 # default window title colors
-set-window-option -g window-status-fg brightblue #base0
-set-window-option -g window-status-bg default
-#set-window-option -g window-status-attr dim
+setw -g window-status-fg colour244 #base0
+setw -g window-status-bg default
+setw -g window-status-attr dim
 
 # active window title colors
-set-window-option -g window-status-current-fg brightred #orange
-set-window-option -g window-status-current-bg default
-#set-window-option -g window-status-current-attr bright
+setw -g window-status-current-fg colour166 #orange
+setw -g window-status-current-bg default
+setw -g window-status-current-attr bright
 
 # pane border
-set-option -g pane-border-fg black #base02
-set-option -g pane-active-border-fg brightgreen #base01
+set -g pane-border-fg colour235 #base02
+set -g pane-active-border-fg colour240 #base01
 
 # message text
-set-option -g message-bg black #base02
-set-option -g message-fg brightred #orange
+set -g message-bg colour235 #base02
+set -g message-fg colour166 #orange
 
 # pane number display
-set-option -g display-panes-active-colour blue #blue
-set-option -g display-panes-colour brightred #orange
+set -g display-panes-active-colour colour33 #blue
+set -g display-panes-colour colour166 #orange
 
 # clock
-set-window-option -g clock-mode-colour green #green
+setw -g clock-mode-colour colour64 #green
 
 # bell
-set-window-option -g window-status-bell-style fg=black,bg=red #base02, red
+setw -g window-status-bell-style fg=colour235,bg=colour160 #base02, red
+##########################
