--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -44,37 +44,35 @@ bind -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 bind -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 bind p paste-buffer
 
-##### Solarized dark #####
-## default statusbar colors
-set -g status-bg colour235 #base02
-set -g status-fg colour136 #yellow
+# default statusbar colors
+set -g status-bg black #base02
+set -g status-fg yellow #yellow
 set -g status-attr default
 
 # default window title colors
-setw -g window-status-fg colour244 #base0
+setw -g window-status-fg brightblue #base0
 setw -g window-status-bg default
 setw -g window-status-attr dim
 
 # active window title colors
-setw -g window-status-current-fg colour166 #orange
+setw -g window-status-current-fg brightred #orange
 setw -g window-status-current-bg default
-setw -g window-status-current-attr bright
+#set-window-option -g window-status-current-attr bright
 
 # pane border
-set -g pane-border-fg colour235 #base02
-set -g pane-active-border-fg colour240 #base01
+set -g pane-border-fg black #base02
+set -g pane-active-border-fg brightgreen #base01
 
 # message text
-set -g message-bg colour235 #base02
-set -g message-fg colour166 #orange
+set -g message-bg black #base02
+set -g message-fg brightred #orange
 
 # pane number display
-set -g display-panes-active-colour colour33 #blue
-set -g display-panes-colour colour166 #orange
+set -g display-panes-active-colour blue #blue
+set -g display-panes-colour brightred #orange
 
 # clock
-setw -g clock-mode-colour colour64 #green
+setw -g clock-mode-colour green #green
 
 # bell
-setw -g window-status-bell-style fg=colour235,bg=colour160 #base02, red
-##########################
+setw -g window-status-bell-style fg=black,bg=red #base02, red
