--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -5,7 +5,7 @@ set -sg escape-time 1
 set -g default-terminal "screen-256color"
 
 # キーバインドのプレフィックス変更
-set -g prefix C-a
+set -g prefix C-Space
 unbind C-b
 
 # ウィンドウのインデッックスを1から始める
