--- a/config/git/config
+++ b/config/git/config
@@ -5,7 +5,7 @@
 	editor = nvim
 	excludesfile = /Users/sakuraba/.gitignore_global
 [ghq]
-	root=~/Sources
+	root=~/Development/src
 [alias]
 	tree = log --graph --all --format='%x09%C(cyan bold)%an%Creset%x09%C(yellow)%h%Creset %C(magenta reverse)%d%Creset %s'
 	branches = branch -a
