--- a/config/nvim/lazy_dein.toml
+++ b/config/nvim/lazy_dein.toml
@@ -1,3 +1,24 @@
+##### denite.nvim #####
+[[plugins]]
+repo = 'Shougo/denite.nvim'
+on_event = 'BufRead'
+hook_add = '''
+nnoremap <silent> <Leader>o :<C-u>Denite file_rec<CR>
+nnoremap <silent> <Leader>m :<C-u>Denite file_mru<CR>
+nnoremap <silent> <Leader>y :<C-u>Denite neoyank<CR>
+nnoremap <silent> <Leader>l :<C-u>Denite line<CR>
+nnoremap <silent> <Leader>g :<C-u>Denite grep<CR>
+'''
+
+[[plugins]]
+repo = 'Shougo/neoyank.vim'
+on_event = 'BufRead'
+
+[[plugins]]
+repo = 'Shougo/neomru.vim'
+on_event = 'BufRead'
+#######################
+
 ##### Go #####
 [[plugins]]
 repo = 'fatih/vim-go'
