--- a/config/nvim/lazy_dein.toml
+++ b/config/nvim/lazy_dein.toml
@@ -31,6 +31,17 @@ hook_add = '''
   let g:go_highlight_operators = 1
   let g:go_highlight_build_constraints = 1
 '''
+
+[[plugins]]
+repo = 'zchee/deoplete-go'
+build = 'make'
+hook_add = '''
+  let g:deoplete#sources#go#gocode_binary = $GOPATH.'/bin/gocode'
+  let g:deoplete#sources#go#package_dot = 1
+  let g:deoplete#sources#go#sort_class = ['package', 'const', 'var', 'type', 'func']
+  let g:deoplete#sources#go#use_cache = 1
+  let g:deoplete#sources#go#json_directory = $XDG_CACHE_HOME.'/go'
+'''
 ##############
 
 ##### Ruby #####
