--- a/config/nvim/lazy_dein.toml
+++ b/config/nvim/lazy_dein.toml
@@ -19,6 +19,33 @@ repo = 'Shougo/neomru.vim'
 on_event = 'BufRead'
 #######################
 
+##### Auto Complete #####
+[[plugins]]
+repo = 'Shougo/deoplete.nvim'
+on_i = 1
+if 'has("python3")'
+hook_add = '''
+  let g:deoplete#enable_at_startup = 1
+'''
+hook_post_source = '''
+  let g:deoplete#sources#omni_patterns.go = '\h\w\.\w*'
+'''
+
+[[plugins]]
+repo = 'zchee/deoplete-go'
+build = 'make'
+on_ft = 'go'
+on_i = 1
+depends = 'deoplete.nvim'
+hook_add = '''
+  let g:deoplete#sources#go#gocode_binary = $GOPATH.'/bin/gocode'
+  let g:deoplete#sources#go#package_dot = 1
+  let g:deoplete#sources#go#sort_class = ['package', 'const', 'var', 'type', 'func']
+  let g:deoplete#sources#go#use_cache = 1
+  let g:deoplete#sources#go#json_directory = $XDG_CACHE_HOME.'/go'
+'''
+#########################
+
 ##### Go #####
 [[plugins]]
 repo = 'fatih/vim-go'
@@ -30,17 +57,6 @@ hook_add = '''
   let g:go_highlight_structs = 1
   let g:go_highlight_operators = 1
   let g:go_highlight_build_constraints = 1
-'''
-
-[[plugins]]
-repo = 'zchee/deoplete-go'
-build = 'make'
-hook_add = '''
-  let g:deoplete#sources#go#gocode_binary = $GOPATH.'/bin/gocode'
-  let g:deoplete#sources#go#package_dot = 1
-  let g:deoplete#sources#go#sort_class = ['package', 'const', 'var', 'type', 'func']
-  let g:deoplete#sources#go#use_cache = 1
-  let g:deoplete#sources#go#json_directory = $XDG_CACHE_HOME.'/go'
 '''
 ##############
 
