--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -1,48 +1,20 @@
-# キー入力のディレイを減らす
-set -sg escape-time 1
-
-# 256色端末を使用
-set -g default-terminal "screen-256color"
-
-# キーバインドのプレフィックス変更
+# プレフィックス
 set -g prefix C-Space
+bind C-Space send-prefix
 unbind C-b
 
-# ウィンドウのインデッックスを1から始める
-set -g base-index 1
-# ペインのインデックスを1から始める
-set -g pane-base-index 1
-
-# マウスを有効にする
 setw -g mouse
+setw -g aggressive-resize on
+set -g default-terminal "screen-256color"
 
-# ウィンドウ分割のキーバインド
-bind | split-window -h
-bind - split-window -v
+set -g status-left '#{prefix_highlight}'
+set -g status-right 'CPU:#{cpu_percentage} #{battery_percentage} #{battery_remain} | %h-/%d %H:%M'
+setw -g window-status-format '#P: #(shell command)'
 
-# ペイン移動のキーバインド
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-
-# ペインリサイズのキーバインド
-bind -r H resize-pane -L 5
-bind -r J resize-pane -D 5
-bind -r K resize-pane -U 5
-bind -r L resize-pane -R 5
-
-# クリップボード連携
-set -g default-command "reattach-to-user-namespace -l $SHELL"
-
-# Viキーバインドを使用
-setw -g mode-keys vi
-
-# コピーモードのキーバインド
-bind -t vi-copy v begin-selection
-bind -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
-bind -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-bind p paste-buffer
+# default statusbar colors
+set -g status-bg black #base02
+set -g status-fg yellow #yellow
+set -g status-attr default
 
 # default statusbar colors
 set -g status-bg black #base02
@@ -76,3 +48,16 @@ setw -g clock-mode-colour green #green
 
 # bell
 setw -g window-status-bell-style fg=black,bg=red #base02, red
+
+set -g @shell_mode 'vi'
+
+set -g @tpm_plugins '                \
+  tmux-plugins/tpm                   \
+  tmux-plugins/tmux-pain-control     \
+  tmux-plugins/tmux-copycat          \
+  tmux-plugins/tmux-battery          \
+  tmux-plugins/tmux-cpu              \
+  tmux-plugins/tmux-prefix-highlight \
+'
+
+run-shell '$XDG_CACHE_HOME/tmux/tpm/tpm'
