--- a/config/nvim/filetype.toml
+++ b/config/nvim/filetype.toml
@@ -20,11 +20,13 @@ on_ft = 'ruby'
 [[plugins]]
 repo = 'tpope/vim-rails'
 on_ft = 'ruby'
-
-[[plugins]]
-repo = 'fishbullet/deoplete-ruby'
-on_ft = 'ruby'
 ################
+
+##### JavaScript #####
+[[plugins]]
+repo = 'pangloss/vim-javascript'
+on_ft = 'js'
+######################
 
 ##### Toml #####
 [[plugins]]
