--- a/config/nvim/lazy_dein.toml
+++ b/config/nvim/lazy_dein.toml
@@ -17,6 +17,10 @@ on_event = 'BufRead'
 [[plugins]]
 repo = 'Shougo/neomru.vim'
 on_event = 'BufRead'
+
+[[plugins]]
+repo = 'tsukkee/unite-tag'
+on_event = 'BufRead'
 #######################
 
 ##### Auto Complete #####
@@ -39,6 +43,10 @@ hook_add = '''
   let g:deoplete#sources#go#sort_class = ['package', 'const', 'var', 'type', 'func']
   let g:deoplete#sources#go#use_cache = 1
   let g:deoplete#sources#go#json_directory = $XDG_CACHE_HOME.'/go'
+  let g:deoplete#omni#input_patterns = {}
+  let g:deoplete#omni#input_patterns.ruby = ['[^. *\t]\.\w*', '[a-zA-Z_]\w*::']
+  let g:deoplete#omni#functions = {}
+  let g:deoplete#omni#functions.ruby = 'rubycomplete#Complete'
 '''
 #########################
 
