--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -1,65 +1,48 @@
-set -sg escape-time 0
+##### Tmux Plugins #####
+set -g @tpm_plugins '                  \
+  tmux-plugins/tpm                     \
+  tmux-plugins/tmux-sensible           \
+  tmux-plugins/tmux-pain-control       \
+  seebi/tmux-colors-solarized          \
+  tmux-plugins/tmux-battery            \
+  tmux-plugins/tmux-cpu                \
+  tmux-plugins/tmux-prefix-highlight   \
+  tmux-plugins/tmux-sidebar            \
+  tmux-plugins/tmux-copycat            \
+  tmux-plugins/tmux-resurrect          \
+  tmux-plugins/tmux-continuum          \
+  tmux-plugins/tmux-yank               \
+'
 
-#プレフィックス
+##### Color #####
+set -g @colors-solarized 'dark'
+
+##### Prefix #####
 set -g prefix C-Space
 bind C-Space send-prefix
 unbind C-b
 
-setw -g mouse
-setw -g aggressive-resize on
-set -g default-terminal "screen-256color"
-
+##### StatusLine #####
 set -g status-left '#{prefix_highlight}'
 set -g status-right 'CPU:#{cpu_percentage} #{battery_percentage} #{battery_remain} | %h-/%d %H:%M'
 setw -g window-status-format '#P: #(shell command)'
 
-# default statusbar colors
-set -g status-bg black #base02
-set -g status-fg yellow #yellow
-set -g status-attr default
+##### Sessions #####
+set -g @continuum-restore 'on'
+set -g @resurrect-capture-pane-contents 'on'
+set -g @resurrect-strategy-nvim 'session'
 
-# default statusbar colors
-set -g status-bg black #base02
-set -g status-fg yellow #yellow
-set -g status-attr default
-
-# default window title colors
-setw -g window-status-fg brightblue #base0
-setw -g window-status-bg default
-setw -g window-status-attr dim
-
-# active window title colors
-setw -g window-status-current-fg brightred #orange
-setw -g window-status-current-bg default
-#set-window-option -g window-status-current-attr bright
-
-# pane border
-set -g pane-border-fg black #base02
-set -g pane-active-border-fg brightgreen #base01
-
-# message text
-set -g message-bg black #base02
-set -g message-fg brightred #orange
-
-# pane number display
-set -g display-panes-active-colour blue #blue
-set -g display-panes-colour brightred #orange
-
-# clock
-setw -g clock-mode-colour green #green
-
-# bell
-setw -g window-status-bell-style fg=black,bg=red #base02, red
-
+##### Copy and Paste
 set -g @shell_mode 'vi'
 
-set -g @tpm_plugins '                \
-  tmux-plugins/tpm                   \
-  tmux-plugins/tmux-pain-control     \
-  tmux-plugins/tmux-copycat          \
-  tmux-plugins/tmux-battery          \
-  tmux-plugins/tmux-cpu              \
-  tmux-plugins/tmux-prefix-highlight \
-'
+#setw -g mode-keys vi
+#bind-key -t vi-copy v begin-selection
+#bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+#unbind -t vi-copy Enter
+#bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
-run-shell '$XDG_CACHE_HOME/tmux/tpm/tpm'
+setw -g mouse
+set -g default-terminal "screen-256color"
+
+
+run '$XDG_CACHE_HOME/tmux/plugins/tpm/tpm'
