--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -9,8 +9,6 @@ set -g @tpm_plugins '                  \
   tmux-plugins/tmux-prefix-highlight   \
   tmux-plugins/tmux-sidebar            \
   tmux-plugins/tmux-copycat            \
-  tmux-plugins/tmux-resurrect          \
-  tmux-plugins/tmux-continuum          \
   tmux-plugins/tmux-yank               \
 '
 
@@ -27,22 +25,14 @@ set -g status-left '#{prefix_highlight}'
 set -g status-right 'CPU:#{cpu_percentage} #{battery_percentage} #{battery_remain} | %h-/%d %H:%M'
 setw -g window-status-format '#P: #(shell command)'
 
-##### Sessions #####
-set -g @continuum-restore 'on'
-set -g @resurrect-capture-pane-contents 'on'
-set -g @resurrect-strategy-nvim 'session'
-
-##### Copy and Paste
+##### Copy and Paste #####
 set -g @shell_mode 'vi'
 
-#setw -g mode-keys vi
-#bind-key -t vi-copy v begin-selection
-#bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-#unbind -t vi-copy Enter
-#bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
-
+##### Enable Mouse #####
 setw -g mouse
-set -g default-terminal "screen-256color"
+
+
+#set -g default-terminal "screen-256color"
 
 
 run '$XDG_CACHE_HOME/tmux/plugins/tpm/tpm'
