--- a/config/nvim/lazy_dein.toml
+++ b/config/nvim/lazy_dein.toml
@@ -2,12 +2,19 @@
 [[plugins]]
 repo = 'Shougo/denite.nvim'
 on_event = 'BufRead'
-hook_add = '''
-nnoremap <silent> <Leader>o :<C-u>Denite file_rec<CR>
-nnoremap <silent> <Leader>m :<C-u>Denite file_mru<CR>
-nnoremap <silent> <Leader>y :<C-u>Denite neoyank<CR>
-nnoremap <silent> <Leader>l :<C-u>Denite line<CR>
-nnoremap <silent> <Leader>g :<C-u>Denite grep<CR>
+hook_source = '''
+nnoremap <silent> <Leader>do :<C-u>Denite file_rec<CR>
+nnoremap <silent> <Leader>dm :<C-u>Denite file_mru<CR>
+nnoremap <silent> <Leader>dy :<C-u>Denite neoyank<CR>
+nnoremap <silent> <Leader>dl :<C-u>Denite line<CR>
+nnoremap <silent> <Leader>dg :<C-u>Denite grep<CR>
+'''
+hook_post_source = '''
+call denite#custom#var('grep', 'command',
+\ ['ag', '--nogroup', '--nocolor', '--smart-case', '--hidden'])
+call denite#custom#var('grep', 'default_opts', [])
+call denite#custom#var('grep', 'recursive_opts', [])
+call denite#custom#source('file_rec, grep', 'matcher', ['matcher_cpsm'])
 '''
 
 [[plugins]]
@@ -26,10 +33,24 @@ on_event = 'BufRead'
 ##### Auto Complete #####
 [[plugins]]
 repo = 'Shougo/deoplete.nvim'
-on_i = 1
+if = "has('nvim')"
 if = 'has("python3")'
-hook_add = '''
+on_i = 1
+hook_source = '''
   let g:deoplete#enable_at_startup = 1
+  let g:deoplete#auto_complete_delay = 0
+  let g:deoplete#auto_complete_start_length = 1
+  let g:deoplete#enable_smart_case = 1
+  inoremap <silent><expr> <TAB> 
+  \  pumvisible() ? "\<C-n>" :
+  \  <SID>check_back_space() ? "\<TAB>" :
+  \  deoplete#manual_complete()
+  function s:check_back_space() abort "{{{
+    let col = col('.') - 1
+    return !col || getline('.')[col - 1] =~ '\s'
+  endfunction"}}}
+  inoremap <expr><S-TAB> pumvisible() ? "\<C-p>" : "\<C-h>"
+  inoremap <expr><BS> deoplete#smart_close_popup()."\<C-h>"
 '''
 
 [[plugins]]
@@ -48,7 +69,23 @@ hook_add = '''
   let g:deoplete#omni#functions = {}
   let g:deoplete#omni#functions.ruby = 'rubycomplete#Complete'
 '''
+
+[[plugins]]
+repo = 'fishbullet/deoplete-ruby'
+on_ft = 'ruby'
+depends = 'deoplete.nvim'
 #########################
+
+#### Input support #####
+[[plugins]]
+repo = 'cohama/lexima.vim'
+on_i = 1
+########################
+
+##### Matcher #####
+[[plugins]]
+repo = 'nixprime/cpsm'
+###################
 
 ##### Unite.vim #####
 [[plugins]]
