--- a/config/nvim/dein.toml
+++ b/config/nvim/dein.toml
@@ -129,4 +129,12 @@ hook_add = '''
 repo = 'tpope/vim-fugitive'
 ###############
 
-
+##### ctags #####
+[[plugins]]
+repo = 'soramugi/auto-ctags.vim'
+hook_add = '''
+let g:auto_ctags = 1
+let g:auto_ctags_directory_list = ['.git', '.svn']
+let g:auto_ctags_filetype_mode = 1
+'''
+#################
