--- a/config/nvim/lazy_dein.toml
+++ b/config/nvim/lazy_dein.toml
@@ -14,7 +14,9 @@ call denite#custom#var('grep', 'command',
 \ ['ag', '--nogroup', '--nocolor', '--smart-case', '--hidden'])
 call denite#custom#var('grep', 'default_opts', [])
 call denite#custom#var('grep', 'recursive_opts', [])
+call denite#custom#var('grep', 'separator', ['--'])
 call denite#custom#source('file_rec, grep', 'matcher', ['matcher_cpsm'])
+call denite#custom#map('normal', '-', '<denite:do_action:split>', 'noremap')
 '''
 
 [[plugins]]
@@ -86,14 +88,3 @@ on_i = 1
 [[plugins]]
 repo = 'nixprime/cpsm'
 ###################
-
-##### Unite.vim #####
-[[plugins]]
-repo = 'Shougo/neomru.vim'
-on_source = 'unite.vim'
-
-[[plugins]]
-repo = 'Shougo/neoyank.vim'
-on_source = 'unite.vim'
-#####################
-
