--- a/config/nvim/dein.toml
+++ b/config/nvim/dein.toml
@@ -43,12 +43,12 @@ repo = 'easymotion/vim-easymotion'
 hook_add = '''
   let g:EasyMotion_smartcase = 1
   let g:EasyMotion_do_mapping = 0
-  nmap <Leader> <Plug>(easymotion-prefix)
-  nmap <Leader>l <Plug>(easymotion-lineforward)
-  nmap <Leader>j <Plug>(easymotion-j)
-  nmap <Leader>k <Plug>(easymotion-k)
-  nmap <Leader>h <Plug>(easymotion-linebackward)
-  nmap <Leader>s <Plug>(easymotion-overwin-f2)
+  nnoremap <Leader><Leader> <Plug>(easymotion-prefix)
+  nnoremap <Leader><Leader>l <Plug>(easymotion-lineforward)
+  nnoremap <Leader><Leader>j <Plug>(easymotion-j)
+  nnoremap <Leader><Leader>k <Plug>(easymotion-k)
+  nnoremap <Leader><Leader>h <Plug>(easymotion-linebackward)
+  nnoremap <Leader><Leader>s <Plug>(easymotion-overwin-f2)
 '''
 ######################
 
