--- a/config/nvim/lazy_dein.toml
+++ b/config/nvim/lazy_dein.toml
@@ -16,7 +16,9 @@ call denite#custom#var('grep', 'default_opts', [])
 call denite#custom#var('grep', 'recursive_opts', [])
 call denite#custom#var('grep', 'separator', ['--'])
 call denite#custom#source('file_rec, grep', 'matcher', ['matcher_cpsm'])
-call denite#custom#map('normal', '-', '<denite:do_action:split>', 'noremap')
+call denite#custom#map('_', '-', '<denite:do_action:split>')
+call denite#custom#map('_', '|', '<denite:do_action:vsplit>')
+call denite#custom#map('insert', 'jj', '<denite:enter_mode:normal>')
 '''
 
 [[plugins]]
